Improve Overview sidebar margins to prevent overlap

--- a/src/assets/scss/sidebar.scss
+++ b/src/assets/scss/sidebar.scss
@@ -44,13 +44,13 @@
 }
 
 .practice-tab {
-    margin-top: 20px;
+    margin: 10px 0;
     border-top: 1px solid $purple;
     padding-top: 20px;
 }
 
 #analysis-tab {
-    margin-top: 20px;
+    margin: 10px 0;
     border-top: 1px solid $purple;
 }
 
